--- a/css/index.css
+++ b/css/index.css
@@ -10,3 +10,7 @@ table.dataTable thead .sorting_desc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:before {
     bottom: .5em;
 }
+
+#user-photo {
+    border-radius: 50%;
+}
